--- a/css/index.css
+++ b/css/index.css
@@ -6,9 +6,17 @@
   border: solid 1px red;
 }
 
+.header-title {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.466);
+}
+
 .table .rwd-table {
   margin: 1em 0;
-  min-width: 300px;
+  min-width: 100%;
+}
+
+.table .rwd-table tr td, .table .rwd-table tr th {
+  text-align: center;
 }
 
 .table .rwd-table tr {
