--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,10 +6,18 @@
         border: solid 1px red;
     }
 }
+.header-title{
+  border-bottom: solid 1px rgba(0, 0, 0, 0.466);
+}
 .table{
 .rwd-table {
   margin: 1em 0;
-  min-width: 300px;
+  min-width: 100%;
+  tr{
+    td, th{
+      text-align: center;
+    }
+  }
 }
 .rwd-table tr {
   border-top: 1px solid #ddd;
